--- a/drain/static/css/custom.css
+++ b/drain/static/css/custom.css
@@ -47,6 +47,22 @@
     --ul-li-icon: fa-asterisk;
 }
 
-a.btn{ 
-  color: white!important;
+body {
+    font-family: system-ui, sans-serif;
+    font-weight: 300;
+    line-height: 1.6;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: 400;
+}
+
+a.btn{
+    color: white!important;
+}
+
