:fix: use relative url for custom css

--- a/drain/layouts/partials/custom_head.html
+++ b/drain/layouts/partials/custom_head.html
@@ -31,7 +31,7 @@
 
 <!-- <link rel="stylesheet" href='{{ "css/custom.css" | absURL }}'> -->
 
-<link rel="stylesheet" href='{{ "css/custom.css" | absURL }}'>
+<link rel="stylesheet" href='{{ "css/custom.css" | relURL }}'>
 
 <!-- Custom CSS: Color Codes
      You may checkout https://htmlcolorcodes.com/ to get those
